# elm2nix

./: elm2nix.cabal
src/: elm2nix.hs
